BEM model fixes

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           </li>
         </ul>
       </section>
-      <section class="resourсes">
+      <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">
           Больше материвлов о тезниках и лайфхаках обучения
@@ -302,11 +302,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-      <div class="footer__column_content_copyright">
-        <div class="logo_place_footer"></div>
+      <div class="footer__column footer__column_content_copyright">
+        <div class="logo logo_place_footer"></div>
         <div class="footer__author">&copy;Аверченков Денис</div>
       </div>
-      <div class="footer__column_content_info">
+      <div class="footer__column footer__column_content_info">
         <h5 class="footer__column-heading">О Практикуме</h5>
         <ul class="footer__column-links">
           <li>
@@ -320,7 +320,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer__column_content_social">
+      <div class="footer__column footer__column_content_social">
         <h5 class="footer__column-heading">Соцсети</h5>
         <ul class="footer__column-links">
           <li>
