--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Denis Averchenkov" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="author" content="Denis Averchenkov"/>
   <title>Научиться учиться</title>
-  <link rel="icon" href="./images/triangle.svg" />
-  <link rel="stylesheet" href="./pages/index.css" />
+  <link rel="icon" href="./images/triangle.svg"/>
+  <link rel="stylesheet" href="./pages/index.css"/>
 </head>
 <body class="page">
 <header class="header">
@@ -58,7 +58,7 @@
           alt='Обложка книги "101 эссе которые изменят ваше мышление"'
           class="cards__image"
         />
-        <h4 class="cards__title">Два вида внимания</h4>
+        <h3 class="cards__title">Два вида внимания</h3>
         <p class="cards__description">
           Глубокие знания возникают, если чередовать сфокусированное и
           рассеянное мышление.
@@ -70,7 +70,7 @@
           alt="Мраморная статуя"
           class="cards__image"
         />
-        <h4 class="cards__title">Recall</h4>
+        <h3 class="cards__title">Recall</h3>
         <p class="cards__description">
           Вспоминайте изученное — это позволит соединить разрозненные порции
           памяти.
@@ -82,7 +82,7 @@
           alt="Всемирный торговый центр вид внутри"
           class="cards__image"
         />
-        <h4 class="cards__title">Интерливинг</h4>
+        <h3 class="cards__title">Интерливинг</h3>
         <p class="cards__description">
           Изучайте несколько навыков одновременно, они обогащают друг друга.
         </p>
@@ -93,7 +93,7 @@
           alt="Городская библиотека штутгарта"
           class="cards__image"
         />
-        <h4 class="cards__title">Вопросы</h4>
+        <h3 class="cards__title">Вопросы</h3>
         <p class="cards__description">
           Слушая преподавателя, придумывайте хороший вопрос, который вас
           действительно волнует.
@@ -105,7 +105,7 @@
           alt="Стопка книг на руке"
           class="cards__image"
         />
-        <h4 class="cards__title">Иллюзия компетентности</h4>
+        <h3 class="cards__title">Иллюзия компетентности</h3>
         <p class="cards__description">
           Повторите про себя, запишите, расскажите другу: вам только
           кажется, что вы владеете новой темой.
@@ -169,29 +169,29 @@
     <p class="section-subtitle">Про учёбу и мозг</p>
     <ul class="table">
       <li class="table__cell">
-        <h4 class="table__heading">86 миллиардов</h4>
+        <h3 class="table__heading">86 миллиардов</h3>
         <p class="table__text">Число нейронов в мозге человека</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">2.1 миллиарда</h4>
+        <h3 class="table__heading">2.1 миллиарда</h3>
         <p class="table__text">
           Число нуждающихся в повышении квалификации
         </p>
         <p class="table__text">Всемирный Банк, 2017</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">1000 терабайт</h4>
+        <h3 class="table__heading">1000 терабайт</h3>
         <p class="table__text">Объём памяти человека</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">500 триллионов</h4>
+        <h3 class="table__heading">500 триллионов</h3>
         <p class="table__text">
           Число ответственных за обучение нервных синапсов у взрослого
           человека
         </p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">420 миллионов</h4>
+        <h3 class="table__heading">420 миллионов</h3>
         <p class="table__text">
           Число взрослых людей моложе 25 лет, не имеющих образования для
           трудоустройства
@@ -199,15 +199,15 @@
         <p class="table__text">Всемирный Банк, 2017</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">17–20 лет</h4>
+        <h3 class="table__heading">17–20 лет</h3>
         <p class="table__text">Пик обучаемости</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">1885 год</h4>
+        <h3 class="table__heading">1885 год</h3>
         <p class="table__text">Открытие кривой забывания</p>
       </li>
       <li class="table__cell">
-        <h4 class="table__heading">1889 год</h4>
+        <h3 class="table__heading">1889 год</h3>
         <p class="table__text">Открытие условного рефлекса</p>
       </li>
     </ul>
@@ -226,7 +226,7 @@
       <p class="khan__quote-author">Джордж Лукас</p>
       <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
       <div class="khan__book-container">
-        <div class="khan__book-pic"></div>
+        <img class="khan__book-pic" src="images/khan-book.jpg" alt = 'обложка книги "Весь мир - школа"'>
         <a
           href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=bM8u0QAAAA"
           target="_blank"
@@ -314,54 +314,39 @@
     </p>
     <ul class="resources__logo-zone">
       <li class="resources__logo">
-        <a
-          class="resources__link"
-          href="https://arzamas.academy/"
-          target="_blank"
-        >
-          <img
-            class="resources__image"
-            src="./images/logo/resources-arzamas.svg"
-            alt="Логотип проекта об истории культуры, Arzamas"
-          />
+        <a class="resources__link"
+           href="https://arzamas.academy/"
+           target="_blank">
+          <img class="resources__image"
+               src="./images/logo/resources-arzamas.svg"
+               alt="Логотип проекта об истории культуры, Arzamas"/>
         </a>
       </li>
       <li class="resources__logo">
-        <a
-          class="resources__link"
-          href="https://nplus1.ru/"
-          target="_blank"
-        >
-          <img
-            class="resources__image"
-            src="./images/logo/resources-n1.svg"
-            alt="Логотип издания N+1"
-          />
+        <a class="resources__link"
+           href="https://nplus1.ru/"
+           target="_blank">
+          <img class="resources__image"
+               src="./images/logo/resources-n1.svg"
+               alt="Логотип издания N+1"/>
         </a>
       </li>
       <li class="resources__logo">
-        <a
-          class="resources__link"
-          href="https://strelka.com/ru"
-          target="_blank"
-        >
-          <img
-            class="resources__image"
-            src="./images/logo/resources-strelka.svg"
-            alt="Логотип института Strelka"
-          />
+        <a class="resources__link"
+           href="https://strelka.com/ru"
+           target="_blank">
+          <img class="resources__image"
+               src="./images/logo/resources-strelka.svg"
+               alt="Логотип института Strelka"/>
         </a>
       </li>
       <li class="resources__logo">
-        <a
-          class="resources__link"
-          href="https://polka.academy/"
-          target="_blank"
-        >
-          <img
-            class="resources__image"
-            src="./images/logo/resources-polka.svg"
-            alt="Логотип проекта о русской литературе, Полка"
+        <a class="resources__link"
+           href="https://polka.academy/"
+           target="_blank">
+          <img class="resources__image"
+               src="./images/logo/resources-polka.svg"
+               alt="Логотип проекта о русской литературе, Полка"
           />
         </a>
       </li>
@@ -375,77 +360,59 @@
       <p class="footer__author">&copy; Аверченков Денис</p>
     </div>
     <div class="footer__column footer__column_content_info">
-      <h5 class="footer__column-heading">О Практикуме</h5>
+      <h4 class="footer__column-heading">О Практикуме</h4>
       <nav>
         <ul class="footer__column-links">
           <li>
-            <a
-              href="https://practicum.yandex.ru/"
-              target="_blank"
-              class="footer__column-link"
-            >Главная</a
-            >
+            <a href="https://practicum.yandex.ru/"
+               target="_blank"
+               class="footer__column-link">Главная
+            </a>
           </li>
           <li>
-            <a
-              href="https://yandex.ru/support/praktikum/principle-of-learning.html"
-              target="_blank"
-              class="footer__column-link"
-            >Концепция</a
-            >
+            <a href="https://yandex.ru/support/praktikum/principle-of-learning.html"
+               target="_blank"
+               class="footer__column-link">Концепция
+            </a>
           </li>
           <li>
-            <a
-              href="https://yandex.ru/support/praktikum/mentors.html"
-              target="_blank"
-              class="footer__column-link"
-            >Наставники</a
-            >
+            <a href="https://yandex.ru/support/praktikum/mentors.html"
+               target="_blank"
+               class="footer__column-link">Наставники
+            </a>
           </li>
         </ul>
       </nav>
     </div>
     <div class="footer__column footer__column_content_social">
-      <h5 class="footer__column-heading">Соцсети</h5>
+      <h4 class="footer__column-heading">Соцсети</h4>
       <nav>
         <ul class="footer__column-links">
           <li>
-            <a
-              href="https://www.facebook.com/yandex.practicum"
-              target="_blank"
-              class="footer__column-link"
-            >
-              <img
-                class="footer__social-icon"
-                src="./images/facebook_white.svg"
-                alt="Логотип facebook"
-              />Facebook
+            <a href="https://www.facebook.com/yandex.practicum"
+               target="_blank"
+               class="footer__column-link">
+              <img class="footer__social-icon"
+                   src="./images/facebook_white.svg"
+                   alt="Логотип facebook"/>Facebook
             </a>
           </li>
           <li>
-            <a
-              href="https://vk.com/yandex.practicum"
-              target="_blank"
-              class="footer__column-link"
-            >
-              <img
-                class="footer__social-icon"
-                src="./images/vk_white.svg"
-                alt="Логотип ВКонтакте"
-              />ВКонтакте
+            <a href="https://vk.com/yandex.practicum"
+               target="_blank"
+               class="footer__column-link">
+              <img class="footer__social-icon"
+                   src="./images/vk_white.svg"
+                   alt="Логотип ВКонтакте"/>ВКонтакте
             </a>
           </li>
           <li>
-            <a
-              href="https://www.instagram.com/yndx.practicum/"
-              target="_blank"
-              class="footer__column-link"
-            >
-              <img
-                class="footer__social-icon"
-                src="./images/instagram_white.svg"
-                alt="Логотип Instagram"
-              />Instagram
+            <a href="https://www.instagram.com/yndx.practicum/"
+               target="_blank"
+               class="footer__column-link">
+              <img class="footer__social-icon"
+                   src="./images/instagram_white.svg"
+                   alt="Логотип Instagram"/>Instagram
             </a>
           </li>
         </ul>
